--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
         <div class="interface">
             <div class = "logo">
                 <a href="#">
-                    <video class="logo-video" alt="Logo do Portfólio" width="150px" autoplay loop muted>
+                    <video class="logo-video" alt="Logo do Portfólio" width="180px" height="100px" autoplay loop muted>
                         <source src="imagens/Logo animado azul neon futurista para tecnologia.mp4" type="video/mp4">
                 </a>
             </div><!--logo-->
 
             <nav class="menu-desktop">
                 <ul>
-                    <li><a href="">Ínicio</a></li>
+                    <li><a href="#inicio">Ínicio</a></li>
                     <li><a href="">Sobre</a></li>
                     <li><a href="">Projetos</a></li>
                     <li><a href="">Conhecimentos</a></li>
@@ -133,9 +133,9 @@
             </div><!--interface-->
         </section><!--sobre-->
         
-        <section class="projeto">
+        <section id="" class="projeto">
             <div class="interface">
-                <h2 class="titulo">MEUS <span>CONHECIMENTOS.</span></h2>
+                <h2 class="titulo">MEUS <span>CONHECIMENTOS</span></h2>
                 <div class="flex">
                     <div class="projeto-box">
                         <i class="bi bi-filetype-java"></i>
@@ -175,10 +175,10 @@
                     <div class="img-port" style="background-image: url(imagens/imgCRUDJava.jpg);">
                         <div class="overlay">Projeto 1</div>
                     </div>
-                    <div class="img-port">
+                    <div class="img-port" style="background-image: url(imagens/meu-portfolio-img.png);">
                         <div class="overlay">Projeto 2</div>
                     </div>
-                    <div class="img-port">
+                    <div class="img-port" style="background-image: url(imagens/imgCRUDJava.jpg);">
                         <div class="overlay">Projeto 3</div>
                     </div>
                 </div><!--flex-->
@@ -192,7 +192,7 @@
                 <div class="flex">
                     <div class="logo">
                         <a href="">
-                            <video class="logo-video" alt="Logo do Portfólio" width="100px" height="100px" autoplay loop muted>
+                            <video class="logo-video" alt="Logo do Portfólio" width="180px" height="100px" autoplay loop muted>
                                 <source src="imagens/Logo animado azul neon futurista para tecnologia.mp4" type="video/mp4">
                         </a>
                     </div><!--logo-footer-->
