Alteracoes de correcao

--- a/index.html
+++ b/index.html
@@ -21,21 +21,17 @@
         <div class="interface">
             <div class = "logo">
                 <a href="#">
-<<<<<<< HEAD
                     <video class="logo-video" alt="Logo do Portfólio" width="180px" height="100px" autoplay loop muted>
                         <source src="imagens/Logo animado azul neon futurista para tecnologia.mp4" type="video/mp4">
-=======
-                    <img class="logo-Img" src="imagens/logo.png" alt="Logo do Portfólio" width="100px" height="100px">
->>>>>>> 3a58c8dc0f65ba3f16b7eb9d10f452a709dedfc4
                 </a>
             </div><!--logo-->
 
             <nav class="menu-desktop">
                 <ul>
                     <li><a href="#inicio">Ínicio</a></li>
-                    <li><a href="">Sobre</a></li>
-                    <li><a href="">Projetos</a></li>
-                    <li><a href="">Conhecimentos</a></li>
+                    <li><a href="#sobre">Sobre</a></li>
+                    <li><a href="#portfolio">Projetos</a></li>
+                    <li><a href="conhecimentos">Conhecimentos</a></li>
                 </ul>
             </nav>
             <div class="btn-contato">
@@ -78,11 +74,7 @@
             <div class="interface">
                 <div class="flex">
                     <div class="img-sobre">
-<<<<<<< HEAD
                         <img src="imagens/1683139432453.jpg" alt="Minha Foto" width="300px" height="300px" class="img-perfil">
-=======
-                        <img src="imagens/1683139432453.jpg" alt="Minha Foto" width="300px" height="300px">
->>>>>>> 3a58c8dc0f65ba3f16b7eb9d10f452a709dedfc4
                             <div class="btn-social">
                                 <a href=""><button><i class="bi bi-instagram"></i></button></a>
                                 <a href=""><button><i class="bi bi-linkedin"></i></button></a>
@@ -200,12 +192,8 @@
                 <div class="flex">
                     <div class="logo">
                         <a href="">
-<<<<<<< HEAD
-                            <video class="logo-video" alt="Logo do Portfólio" width="180px" height="100px" autoplay loop muted>
+                            <video class="logo-video" alt="Logo do Portfólio" width="150px" height="100px" autoplay loop muted>
                                 <source src="imagens/Logo animado azul neon futurista para tecnologia.mp4" type="video/mp4">
-=======
-                            <img class="logo-Img" src="imagens/logo.png" alt="logo" width="100px">
->>>>>>> 3a58c8dc0f65ba3f16b7eb9d10f452a709dedfc4
                         </a>
                     </div><!--logo-footer-->
                     <div class="btn-social">
